--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,8 +82,8 @@ jobs:
     deploy:
         needs: [docker]
         runs-on: ubuntu-latest
-        environment:
-          name: ${{ github.ref_name == 'main' && 'production' || 'development' }}
+        if: github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
+        environment: 'production'
 
         steps:
           - uses: actions/checkout@v4
