--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -104,16 +104,25 @@ jobs:
               method: kubeconfig
               kubeconfig: ${{ secrets.PORTFOLIO_KUBECONFIG }}
 
-          - name: Deploy to Kubernetes
+          - name: Prepare Image Tag
             run: |
               OWNER=$(echo "${GITHUB_REPOSITORY_OWNER}" | tr '[:upper:]' '[:lower:]')
               REPO=$(echo "${GITHUB_REPOSITORY#*/}" | tr '[:upper:]' '[:lower:]')
               
               IMAGE_BASE="ghcr.io/${OWNER}/${REPO}"
               IMAGE_TAG="${{ github.event.inputs.tag || 'latest' }}"
+              
+              echo "IMAGE_BASE=${IMAGE_BASE}" >> $GITHUB_ENV
+              echo "IMAGE_TAG=${IMAGE_TAG}" >> $GITHUB_ENV
 
-              # Apply any other configuration changes if needed
-              envsubst < .k8s/config.yml | kubectl apply -f -
-              envsubst < .k8s/deployment.yaml | kubectl apply -f -
-              envsubst < .k8s/service.yaml | kubectl apply -f -
-              envsubst < .k8s/ingress.yaml | kubectl apply -f -
+          - name: Apply Kubernetes Manifests - Configuration
+            run: envsubst < .k8s/config.yml | kubectl apply -f -
+
+          - name: Apply Kubernetes Manifests - Deployment
+            run: envsubst < .k8s/deployment.yaml | kubectl apply -f -
+
+          - name: Apply Kubernetes Manifests - Service
+            run: envsubst < .k8s/service.yaml | kubectl apply -f -
+
+          - name: Apply Kubernetes Manifests - Ingress
+            run: envsubst < .k8s/ingress.yaml | kubectl apply -f -
